Add run arguments for JFoenix